--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -17,7 +17,7 @@
   "Home-ConnectButton": "连接",
   "Home-BrowserWallet": "连接钱包",
   "Home-SnackBarText": "关于机枪池存token和itoken之间关系的说明",
-  "Home-SnackBarUrl": "https://www.yuque.com/sawd49/faq/umt7p5",
+  "Home-SnackBarUrl": "https://www.yuque.com/yfiicommunity/faq/umt7p5",
   "Vault-Title": "存入即可增值",
   "Vault-Wallet": "钱包",
   "Vault-Balance": "余额",
@@ -62,7 +62,7 @@
   "Vault-Main-Title": "Vaults",
   "Vault-Second-Title": "存入即可增值",
   "Stake-Main-Title": "YFII / 抵押",
-  "Stake-Pools-Learn-More": "https://www.yuque.com/sawd49",
+  "Stake-Pools-Learn-More": "https://www.yuque.com/yfiicommunity",
   "Stake-Second-Title": "回报率将在收益开始计算后更新，有时稍有延迟",
   "Stake-List-Header-Main": "关于 YFII 你所需知道的一切都在这里",
   "Stake-List-Header-Sub": "您想抵押哪种代币？",
