--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -17,7 +17,7 @@
   "Home-ConnectButton": "연결",
   "Home-BrowserWallet": "지갑 연결",
   "Home-SnackBarText": "보통 토큰 및 itoken을 스테이킹하는 차이점",
-  "Home-SnackBarUrl": "https://docs.yfii.finance/#/itokens",
+  "Home-SnackBarUrl": "https://docs.dfi.money/#/itokens",
   "Vault-Title": "입금하기",
   "Vault-Wallet": "지갑",
   "Vault-Balance": "잔고",
@@ -62,7 +62,7 @@
   "Vault-Main-Title":"채굴풀",
   "Vault-Second-Title":"입금 및 수익",
   "Stake-Main-Title":"YFII / Stake",
-  "Stake-Pools-Learn-More": "https://docs.yfii.finance/#/yield-farming",
+  "Stake-Pools-Learn-More": "https://docs.dfi.money/#/yield-farming",
   "Stake-Second-Title":"보상이 시작되거나 조금 후에 APY가 공개됩니다.",
   "Stake-List-Header-Main":"자료: YFII에 대해 알아야 할 모든 것",
   "Stake-List-Header-Sub":"어떤 토큰을 스테이킹 하시겠습니까?",
