--- a/src/locales/th/translation.json
+++ b/src/locales/th/translation.json
@@ -17,7 +17,7 @@
   "Home-ConnectButton": "การเชื่อมต่อ",
   "Home-BrowserWallet": "เชื่อมต่อกระเป๋าเงิน",
   "Home-SnackBarText": "The difference between token desposited and itoken",
-  "Home-SnackBarUrl": "https://docs.yfii.finance/#/itokens",
+  "Home-SnackBarUrl": "https://docs.dfi.money/#/itokens",
   "Vault-Title": "เพิ่มมูคค่าโดยการฝากเงิน",
   "Vault-Wallet": "กระเป๋าเงิน",
   "Vault-Balance": "จำนวนเงิน ",
@@ -62,7 +62,7 @@
   "Vault-Main-Title": "Vaults",
   "Vault-Second-Title": "Deposit & Earn money",
   "Stake-Main-Title": "YFII / Stake",
-  "Stake-Pools-Learn-More": "https://docs.yfii.finance/#/yield-farming",
+  "Stake-Pools-Learn-More": "https://docs.dfi.money/#/yield-farming",
   "Stake-Second-Title": "APY will be revealed once rewards have begun, or a little bit later",
   "Stake-List-Header-Main": "Knowledge base: Everything you need to know about YFII",
   "Stake-List-Header-Sub": "Which tokens would you like to stake?",
