--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -17,7 +17,7 @@
   "Home-ConnectButton": "接続",
   "Home-BrowserWallet": "ウォレットを接続する",
   "Home-SnackBarText": "The difference between token desposited and itoken",
-  "Home-SnackBarUrl": "https://docs.yfii.finance/#/itokens",
+  "Home-SnackBarUrl": "https://docs.dfi.money/#/itokens",
   "Vault-Title": "入金して稼ぎましょう",
   "Vault-Wallet": "ウォレット",
   "Vault-Balance": "残高",
@@ -62,7 +62,7 @@
   "Vault-Main-Title":"金庫",
   "Vault-Second-Title":"入金して金を稼ぐ",
   "Stake-Main-Title":"YFII / ステーク",
-  "Stake-Pools-Learn-More": "https://docs.yfii.finance/#/yield-farming",
+  "Stake-Pools-Learn-More": "https://docs.dfi.money/#/yield-farming",
   "Stake-Second-Title":"収益率の表示はすぐではないので、ご注意してください。",
   "Stake-List-Header-Main":"知識ベース: YFIIに関するすべての知識",
   "Stake-List-Header-Sub":"ステークしたいトークンを選んでください",
