--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -101,7 +101,8 @@
     "Uniswap": "Uniswap",
     "Audit": "审计报告",
     "v1Vault":"v1 vault",
-    "oldVault":"old yfii finance"
+    "oldVault":"old yfii finance",
+    "todos":"todos"
   },
   "Farm-Main-Title": "Farm",
   "Farm-Second-Title": "持有二姨夫获得妹夫",
