--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -132,5 +132,6 @@
   "Public-Day": " Day ",
   "Public-Hour": " Hour ",
   "Public-Minute": " Minute ",
-  "Public-Seconds": " Seconds "
+  "Public-Seconds": " Seconds ",
+  "LiquidityPool-Title": "Lp"
 }
