--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -135,5 +135,6 @@
   "Public-Day": " 天 ",
   "Public-Hour": " 小时 ",
   "Public-Minute": " 分钟 ",
-  "Public-Seconds": " 秒 "
+  "Public-Seconds": " 秒 ",
+  "LiquidityPool-Title": "Lp"
 }
