--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -3,6 +3,7 @@
   "Nav-Vault": "机枪池",
   "Nav-Stake": "抵押",
   "Nav-Farm": "挖矿",
+  "Nav-lp": "Lp",
   "Foot-Token": "通证合约",
   "Foot-Forum": "论坛",
   "Foot-Audit": "审计",
