--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -3,6 +3,7 @@
   "Nav-Vault":"채굴풀",
   "Nav-Stake":"스테이킹",
   "Nav-Farm":"채굴",
+  "Nav-lp": "Lp",
   "Foot-Token":"토큰 계약",
   "Foot-Forum":"포럼",
   "Foot-Audit":"심사",
