--- a/src/locales/th/translation.json
+++ b/src/locales/th/translation.json
@@ -3,6 +3,7 @@
   "Nav-Vault": "Vault",
   "Nav-Stake": "Stake",
   "Nav-Farm": "Farm",
+  "Nav-lp": "Lp",
   "Foot-Token": "Token Contract",
   "Foot-Forum": "Forum",
   "Foot-Audit": "Audit",
