--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -134,5 +134,5 @@
   "Public-Hour": " Hour ",
   "Public-Minute": " Minute ",
   "Public-Seconds": " Seconds ",
-  "LiquidityPool-Title": "Lp"
+  "Liquidity-Title": "Liquidity Pools"
 }
