--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -137,5 +137,5 @@
   "Public-Hour": " 小时 ",
   "Public-Minute": " 分钟 ",
   "Public-Seconds": " 秒 ",
-  "LiquidityPool-Title": "Lp"
+  "Liquidity-Title": "Liquidity Pools"
 }
