--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -138,5 +138,6 @@
   "Public-Minute": " 分钟 ",
   "Public-Seconds": " 秒 ",
   "Liquidity-Title": "Liquidity Pools",
+  "Liquidity-Pair-Price":"预估提取",
   "Liquidity-Selete":"选择币种"
 }
