#Change 改变Liquidit页面标题

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -138,6 +138,7 @@
   "Public-Minute": " 分钟 ",
   "Public-Seconds": " 秒 ",
   "Liquidity-Title": "Liquidity Pools",
+  "Liquidity-Main-Title": "Liquidity",
   "Liquidity-Pair-Price":"预估提取",
   "Liquidity-Selete":"选择币种"
 }
