--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -137,7 +137,7 @@
   "Liquidity-Title": "Liquidity Pools",
   "Liquidity-Main-Title": "Liquidity",
   "Liquidity-Pair-Price":"Pairprice",
-  "Liquidity-SnackBarText": "보통 토큰 및 itoken을 스테이킹하는 차이점",
+  "Liquidity-SnackBarText": "LP pool description",
   "Liquidity-SnackBarUrl": "https://www.yuque.com/yfiicommunity/faq/fkz9gm",
   "Liquidity-Selete":"Select currency"
 }
