--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -90,8 +90,8 @@
   "Stake-Total-Value-Locked": "Valeur Totale Vérrouillée",
   "Stake-Your-Pool": "Votre part",
   "Stake-Current-Daily": "Taux journalier actuel",
-  "Add-Liquidity": "Supprimer de la liquidité",
-  "Remove-Liquidity": "",
+  "Add-Liquidity": "Ajouter de la liquidité",
+  "Remove-Liquidity": "Supprimer de la liquidité",
   "Buy-Token": "Achat de la devise",
   "Wrap-BNB": "Wrap BNB",
   "Boost": "Boost",
