Adding i18n support to vault details page.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -41,6 +41,10 @@
   "Vault-Description": "Uses: {{vault}}",
   "Vault-Network": "Select Network",
   "Vault-Experimental": "Experimental",
+  "Vault-Loading": "Loading Vault",
+  "Vault-NotFound": "Vault {{vaultId}} not found",
+  "Vault-Details": "Vault Details",
+  "Vaults-Back": "Back to vaults",
   "Hide-Zero-Balances": "Hide Zero Balances",
   "Hide-Zero-Vault-Balances": "Deposited Vaults",
   "Retired-Vaults": "Retired Vaults",
