--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -40,6 +40,10 @@
   "Vault-Staked": "Investido",
   "Vault-Description": "Usa: {{vault}}",
   "Vault-Network": "Rede",
+  "Vault-Loading": "Carregando Cofre",
+  "Vault-NotFound": "Cofre {{vaultId}} não encontrado",
+  "Vault-Details": "Detalhes do Cofre",
+  "Vaults-Back": "Voltar para cofres",
   "Hide-Zero-Balances": "Ocultar Ativos Com Saldo Zero",
   "Hide-Zero-Vault-Balances": "Cofres com Depósitos",
   "Retired-Vaults": "Cofres Aposentados",
