--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,7 +7,7 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Daily",
   "Vault-TVL": "TVL",
-  "Vault-Approving": "Approve...",
+  "Vault-Approving": "Approving...",
   "Vault-ApproveButton": "Approve",
   "Vault-ApprovalSuccess": "Approval success",
   "Vault-ApprovalError": "Approval error: {{error}}",
@@ -18,12 +18,22 @@
   "Vault-Deposited": "Deposited",
   "Vault-DepositSuccess": "Deposit success",
   "Vault-DepositError": "Deposit error: {{error}}",
-  "Vault-Withdrawing": "Withdraw...",
+  "Vault-DepositScenario": "Deposit scenario:",
+  "Vault-DepositScenarioSwap": "Swap ~{{swapIn}} for {{swapOut}} (±{{slippageTolerance}})",
+  "Vault-DepositScenarioAddLiqudity": "Add {{tokenA}} and {{tokenB}} as liqudity to {{poolToken}} pool",
+  "Vault-DepositScenarioDepositToVault": "Deposit recieved {{poolToken}} on Beefy Vault",
+  "Vault-DepositScenarioReturnDust": "Unused assets will be returned to your wallet",
+  "Vault-Withdrawing": "Withdrawing...",
   "Vault-WithdrawButton": "Withdraw",
   "Vault-WithdrawButtonAll": "Withdraw All",
   "Vault-WithdrawFee": "There is a 0.05%-0.1% withdrawal or deposit fee on all vaults",
   "Vault-WithdrawSuccess": "Withdraw success",
   "Vault-WithdrawError": "Withdraw error: {{error}}",
+  "Vault-WithdrawScenario": "Withdraw scenario:",
+  "Vault-WithdrawScenarioRedeem": "Redeem {{mooToken}} receipts for {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Remove liqudity from {{poolToken}} to receive {{tokenA}} and {{tokenB}}",
+  "Vault-WithdrawScenarioSwap": "Swap received {{swapIn}} for {{swapOut}} (±{{slippageTolerance}})",
+  "Vault-WithdrawScenarioTotal": "Around {{totalOut}} will be transferred to your wallet",
   "Vault-Harvesting": "Harvesting...",
   "Vault-HarvestButton": "Harvest",
   "Vault-HarvestConfirm": "Confirm Harvest?",
