Italian & German translation updates. One minor English improvement. (#456)
* Full Spanish translation update

* Spanish translation fix

* Greek translation update. First localization with Zap strings. @wivern-co-uk

* Italian & German translation updates. One minor English improvement.

* fix Italian typo

Co-authored-by: PCRyan <pcyranjr@gmail.com>

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -13,17 +13,27 @@
   "Vault-ApprovalError": "Freigabe fehlgeschlagen: {{error}}",
   "Vault-DepositButton": "Einzahlen",
   "Vault-DepositButtonAll": "Alles einzahlen",
-  "Vault-DepositTokensNote": "Sie erhalten einen {{mooToken}}-Token als Quittung für Ihr eingezahltes Guthaben {{assetToken}}. Die Quittung wird für die Auszahlung Ihrer {{assetToken}} benötigt, handeln oder übertragen Sie die {{mooToken}} nicht an Dritte!",
+  "Vault-DepositTokensNote": "Sie erhalten {{mooToken}}-Token als Quittung für Ihr eingezahltes Guthaben {{assetToken}}. Das Token wird für die Auszahlung Ihrer {{assetToken}} benötigt; handeln oder übertragen Sie das {{mooToken}} nicht an Dritte!",
   "Vault-DepositFee": "Es fällt eine <0,1% Einzahlungsgebühr an, keine Auszahlungsgebühr",
   "Vault-Deposited": "Eingezahlt",
   "Vault-DepositSuccess": "Einzahlung erfolgreich",
   "Vault-DepositError": "Einzahlung fehlgeschlagen: {{error}}",
+  "Vault-DepositScenario": "Die Einzahlung führt zu:",
+  "Vault-DepositScenarioSwap": "Um ein Liquiditätspaar auszugleichen, wechseln von {{swapIn}} auf {{swapOut}} (±{{slippageTolerance}} Slippage und Einzahlungsgebühr, falls vorhanden)",
+  "Vault-DepositScenarioAddLiquidity": "{{poolToken}} kaufen",
+  "Vault-DepositScenarioDepositToVault": "Erhaltenen {{poolToken}} im Beefy Vault einzahlen",
+  "Vault-DepositScenarioReturnDust": "Ungenutzte Restbeträge von {{tokenA}} und {{tokenB}} in Ihr Wallet zurück übertragen",
   "Vault-Withdrawing": "Auszahlen...",
   "Vault-WithdrawButton": "Auszahlen",
   "Vault-WithdrawButtonAll": "Alles auszahlen",
   "Vault-WithdrawFee": "Für alle Vaults wird eine Ein- bzw. Auszahlungsgebühr von 0,05%-0,1% erhoben",
   "Vault-WithdrawSuccess": "Auszahlung erfolgreich",
   "Vault-WithdrawError": "Auszahlung fehlgeschlagen",
+  "Vault-WithdrawScenario": "Die Auszahlung führt zu:",
+  "Vault-WithdrawScenarioRedeem": "Einlösen von {{mooToken}} Token für {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Liquidität aus {{poolToken}} entnehmen, um {{tokenA}} und {{tokenB}} zu erhalten",
+  "Vault-WithdrawScenarioSwap": "Wechseln von geschätzten {{swapIn}} auf {{swapOut}} (±{{slippageTolerance}} Slippage und Abhebungsgebühr, falls vorhanden)",
+  "Vault-WithdrawScenarioTotal": "Überweisen geschätzte {{totalOut}} auf Ihr Wallet",
   "Vault-Harvesting": "Ernten...",
   "Vault-HarvestButton": "Ernten",
   "Vault-HarvestConfirm": "Ernte bestätigen?",
@@ -41,6 +51,10 @@
   "Vault-Description": "Verwendet: {{vault}}",
   "Vault-Network": "Netzwerk auswählen",
   "Vault-Experimental": "Testweise",
+  "Vault-Loading": "Vault wird geladen",
+  "Vault-NotFound": "Vault {{vaultId}} nicht gefunden",
+  "Vault-Details": "Vault Details",
+  "Vaults-Back": "Zurück zu Vaults",
   "Hide-Zero-Balances": "Nullsalden ausblenden",
   "Hide-Zero-Vault-Balances": "Eingezahlte Vaults",
   "Retired-Vaults": "Abgelaufene Vaults",
