--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -18,12 +18,22 @@
   "Vault-Deposited": "Depositato",
   "Vault-DepositSuccess": "Deposito riuscito",
   "Vault-DepositError": "Errore durante il deposito: {{error}}",
+  "Vault-DepositScenario": "Il deposito prevede che:",
+  "Vault-DepositScenarioSwap": "Per ribilanciare la liquidità della coppia, verranno scambiati {{swapIn}} per {{swapOut}} (±{{slippageTolerance}} di slippage e di commissione di deposito, se presenti)",
+  "Vault-DepositScenarioAddLiquidity": "Saranno acquistati {{poolToken}}",
+  "Vault-DepositScenarioDepositToVault": "I {{poolToken}} ricevuti saranno depositati nella cassaforte di Beefy",
+  "Vault-DepositScenarioReturnDust": "I token non utilizzati torneranno nel tuo portafoglio.",
   "Vault-Withdrawing": "Prelievo in corso...",
   "Vault-WithdrawButton": "Preleva",
   "Vault-WithdrawButtonAll": "Preleva tutto",
   "Vault-WithdrawFee": "Ogni cassaforte ha commissione di prelievo o deposito di 0.05%-0.01%",
   "Vault-WithdrawSuccess": "Prelievo riuscito",
   "Vault-WithdrawError": "Errore durante il prelievo: {{error}}",
+  "Vault-WithdrawScenario": "Il prelievo prevede che:",
+  "Vault-WithdrawScenarioRedeem": "Le tue ricevute {{mooToken}} saranno scambiate per {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Sarà rimossa la liquidità da {{poolToken}} per ottenere {{tokenA}} e {{tokenB}}",
+  "Vault-WithdrawScenarioSwap": "Verranno ricevuti circa {{swapIn}} che saranno scambiati per {{swapOut}} (±{{slippageTolerance}} di slippage e di commissione di prelievo, se presenti)",
+  "Vault-WithdrawScenarioTotal": "Circa {{totalOut}} saranno trasferiti al tuo portafoglio",
   "Vault-Harvesting": "Raccolta dei guadagni in corso...",
   "Vault-HarvestButton": "Raccogli i guadagni",
   "Vault-HarvestConfirm": "Confermi di raccogliere i guadagni?",
@@ -41,6 +51,10 @@
   "Vault-Description": "Utilizza: {{vault}}",
   "Vault-Network": "Rete selezionata",
   "Vault-Experimental": "Sperimentale",
+  "Vault-Loading": "Caricamento cassaforte...",
+  "Vault-NotFound": "Cassaforte {{vaultId}} non trovata",
+  "Vault-Details": "Dettagli cassaforte",
+  "Vaults-Back": "Torna alle casseforti",
   "Hide-Zero-Balances": "Nascondi saldi nulli",
   "Hide-Zero-Vault-Balances": "Casseforti con deposito",
   "Retired-Vaults": "Casseforti ritirate",
