--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -19,7 +19,7 @@
   "Vault-DepositSuccess": "Deposit success",
   "Vault-DepositError": "Deposit error: {{error}}",
   "Vault-DepositScenario": "Deposit will result in:",
-  "Vault-DepositScenarioSwap": "To balance a liquidity pair, swap the {{swapIn}} for {{swapOut}} (±{{slippageTolerance}} slippage and deposit fee, if any)",
+  "Vault-DepositScenarioSwap": "To balance a liquidity pair, swap {{swapIn}} for {{swapOut}} (±{{slippageTolerance}} slippage and deposit fee, if any)",
   "Vault-DepositScenarioAddLiquidity": "Purchase {{poolToken}}",
   "Vault-DepositScenarioDepositToVault": "Deposit received {{poolToken}} into Beefy vault",
   "Vault-DepositScenarioReturnDust": "Return unused trace amounts of {{tokenA}} and {{tokenB}} to your wallet",
