Add auto-compounding note

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,6 +7,7 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Daily",
   "Vault-TVL": "TVL",
+  "Vault-AutocompoundingNote": "All vaults auto-compounding at the optimal rate",
   "Vault-Approving": "Approving...",
   "Vault-ApproveButton": "Approve",
   "Vault-ApprovalSuccess": "Approval success",
