Adjust Greek localization & one English field (#462)
* Full Spanish translation update

* Spanish translation fix

* Greek translation update. First localization with Zap strings. @wivern-co-uk

* Italian & German translation updates. One minor English improvement.

* fix Italian typo

* Change Zap Deposit line 2 @wivern-co-uk

* Adjust Greek localization

* fix munged file

Co-authored-by: PCRyan <pcyranjr@gmail.com>

--- a/src/locales/el/translation.json
+++ b/src/locales/el/translation.json
@@ -20,7 +20,7 @@
   "Vault-DepositError": "Αποτυχία κατάθεσης: {{error}}",
   "Vault-DepositScenario": "Η κατάθεση θα έχει ως αποτέλεσμα:",
   "Vault-DepositScenarioSwap": "Για την εξισορρόπηση ενός ζευγαριού ρευστότητας, μετατροπή του {{swapIn}} για {{swapOut}} (±{{slippageTolerance}} ολίσθηση και τέλη ανάληψης, εάν υπάρχουν)",
-  "Vault-DepositScenarioAddLiquidity": "Αγορά {{poolToken}}",
+  "Vault-DepositScenarioAddLiquidity": "Παροχή ρευστότητας για παραλαβή {{poolToken}}",
   "Vault-DepositScenarioDepositToVault": "Κατάθεση ληφθέντων {{poolToken}} στο χρηματοκιβώτιο του Beefy",
   "Vault-DepositScenarioReturnDust": "Επιστροφή αχρησιμοποίητου ίχνους ποσότητας του {{tokenA}} και {{tokenB}} στο πορτοφόλι σας",
   "Vault-Withdrawing": "Ανάληψη...",
@@ -30,7 +30,7 @@
   "Vault-WithdrawSuccess": "Επιτυχής ανάληψη",
   "Vault-WithdrawError": "Αποτυχία ανάληψης: {{error}}",
   "Vault-WithdrawScenario": "Η ανάληψη θα έχει ως αποτέλεσμα:",
-  "Vault-WithdrawScenarioRedeem": "Eξαργυρώστε {{mooToken}} token για {{poolToken}}",
+  "Vault-WithdrawScenarioRedeem": "Εξαργύρωση {{mooToken}} token για {{poolToken}}",
   "Vault-WithdrawScenarioRemoveLiquidity": "Αφαίρεση ρευστότητας από {{poolToken}} για να λάβετε {{tokenA}} και {{tokenB}}",
   "Vault-WithdrawScenarioSwap": "Μετατροπή εκτιμώμενη {{swapIn}} για {{swapOut}} (±{{slippageTolerance}} ολίσθηση και τέλη ανάληψης, εάν υπάρχουν)",
   "Vault-WithdrawScenarioTotal": "Μεταφορά εκτιμώμενη {{totalOut}} στο πορτοφόλι σας",
@@ -105,7 +105,7 @@
   "Stake-Total-Value-Locked": "Συνολική Κλειδωμένη Αξία",
   "Stake-Your-Pool": "Το Pool σας",
   "Stake-Current-Daily": "Τρέχων Ημερήσιος Ρυθμός",
-  "Add-Liquidity": "Πρόσθεση Ρευστότητας",
+  "Add-Liquidity": "Παροχή Ρευστότητας",
   "Remove-Liquidity": "Αφαίρεση Ρευστότητας",
   "Buy-Token": "Αγορά Token",
   "Wrap-BNB": "Wrap BNB",
