Updates to Greek, Dutch, French localizations

--- a/src/locales/el/translation.json
+++ b/src/locales/el/translation.json
@@ -7,6 +7,7 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Ημερήσια",
   "Vault-TVL": "TVL",
+  "Vault-AutocompoundingNote": "Όλα τα χρηματοκιβώτια ανακαταθέτουν στο βέλτιστο ρυθμό",
   "Vault-Approving": "Έγκριση...",
   "Vault-ApproveButton": "Έγκριση",
   "Vault-ApprovalSuccess": "Επιτυχής έγκριση",
