--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -2,10 +2,12 @@
   "Disclaimer": "L'utilisation de Contrats Intelligents, de Jetons et de Crypto est toujours un risque. Faites vos propres recherches avant d'investir.",
   "Network-Error": "Réseau incorrect, sélectionnez le bon réseau",
   "Vault-Wallet": "Portefeuille",
+  "Vault-ConnectWallet": "Connection Portefeuille",
   "Vault-Balance": "Solde",
   "Vault-APY": "PAR (Pourcentage Annuel de Rendement)",
   "Vault-APYDaily": "Journalier",
   "Vault-TVL": "VTV (Valeur Totale Vérrouillée)",
+  "Vault-AutocompoundingNote": "Tous les coffres réinvestissent automatiquement à frequence optimale",
   "Vault-Approving": "Approbation en cours...",
   "Vault-ApproveButton": "Approuver",
   "Vault-ApprovalSuccess": "Approuvé",
@@ -17,12 +19,22 @@
   "Vault-Deposited": "Déposé",
   "Vault-DepositSuccess": "Dépot réussi",
   "Vault-DepositError": "Erreur lors du dépot: {{error}}",
+  "Vault-DepositScenario": "Processus de dépot:",
+  "Vault-DepositScenarioSwap": "Pour équilibrer la paire, échange {{swapIn}} pour {{swapOut}} (±{{slippageTolerance}} slippage et frais de dépot, si applicable",
+  "Vault-DepositScenarioAddLiquidity": "Achat de {{poolToken}}",
+  "Vault-DepositScenarioDepositToVault": "Dépot de {{poolToken}} dans le coffre Beefy",
+  "Vault-DepositScenarioReturnDust": "Retour des poussières de {{tokenA}} et {{tokenB}} dans votre portefeuille",
   "Vault-Withdrawing": "Retrait en cours...",
   "Vault-WithdrawButton": "Retrait",
   "Vault-WithdrawButtonAll": "Tout retirer",
   "Vault-WithdrawFee": "Il y a des frais (de retrait OU de dépot) de 0,05% à 0,1% sur tous les coffres",
   "Vault-WithdrawSuccess": "Retrait réussi",
   "Vault-WithdrawError": "Erreur lors du retrait: {{error}}",
+  "Vault-WithdrawScenario": "Processus de retrait:",
+  "Vault-WithdrawScenarioRedeem": "Retirer vos {{mooToken}} en {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Séparation de la liquidité de {{poolToken}} en {{tokenA}} et {{tokenB}}",
+  "Vault-WithdrawScenarioSwap": "Estimation de l'échange {{swapIn}} pour {{swapOut}} (±{{slippageTolerance}} slippage et frais de retrait, si applicable)",
+  "Vault-WithdrawScenarioTotal": "Vous recevrez environ {{totalOut}} dans votre portefeuille",
   "Vault-Harvesting": "Récolte en cours...",
   "Vault-HarvestButton": "Récolter",
   "Vault-HarvestConfirm": "Confirmer le Récolte?",
@@ -40,6 +52,10 @@
   "Vault-Description": "Uses: {{vault}}",
   "Vault-Network": "Sélecteur de Réseaux",
   "Vault-Experimental": "Expérimental",
+  "Vault-Loading": "Chargement du coffre",
+  "Vault-NotFound": "Coffre {{vaultId}} introuvable",
+  "Vault-Details": "Détails du coffre",
+  "Vaults-Back": "Retour aux coffres",
   "Hide-Zero-Balances": "Cacher les petits soldes",
   "Hide-Zero-Vault-Balances": "Coffres déposés",
   "Retired-Vaults": "Coffres désuets",
