--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -2,56 +2,74 @@
   "Disclaimer": "Het gebruiken van Smart Contracts, Tokens en Crypto is altijd een risico. Doe je eigen onderzoek voordat je investeert.",
   "Network-Error": "Verbind met het juiste netwerk graag.",
   "Vault-Wallet": "Wallet",
+  "Vault-ConnectWallet": "Verbind Wallet",
   "Vault-Balance": "Saldo",
   "Vault-APY": "APY",
   "Vault-APYDaily": "Dagelijks",
   "Vault-TVL": "TVL",
-  "Vault-Approving": "Goedkeuren...",
+  "Vault-AutocompoundingNote": "Alle kluizen herinvesteren automatisch met een optimale frequentie",
+  "Vault-Approving": "Bezig met goedkeuren...",
   "Vault-ApproveButton": "Goedkeuren",
   "Vault-ApprovalSuccess": "Goedkeuring voltooid",
-  "Vault-ApprovalError": "Goedkeuring fout: {{error}}",
+  "Vault-ApprovalError": "Goedkeuring mislukt: {{error}}",
   "Vault-DepositButton": "Stort",
   "Vault-DepositButtonAll": "Stort alles",
+  "Vault-DepositTokensNote": "Je ontvangt {{mooToken}} als stortingsbewijs van uw {{assetToken}} vermogen. Dit bewijs is nodig om uw {{assetToken}} op te nemen, verhandel of verstuur {{mooToken}} niet naar vreemden!",
   "Vault-DepositFee": "Er zijn <0.1% stortingskosten, geen opnamekosten",
   "Vault-Deposited": "Gestort",
   "Vault-DepositSuccess": "Storting gelukt",
-  "Vault-DepositError": "Storting fout: {{error}}",
-  "Vault-Withdrawing": "Opnemen...",
+  "Vault-DepositError": "Storting mislukt: {{error}}",
+  "Vault-DepositScenario": "Storting resulteert in:",
+  "Vault-DepositScenarioSwap": "Voor de juiste verhouding, verwissel {{swapIn}} voor {{swapOut}} (±{{slippageTolerance}} afwijking en stort kosten, indien van toepassing)",
+  "Vault-DepositScenarioAddLiquidity": "Voeg liquiditeit toe om {{poolToken}} te ontvangen",
+  "Vault-DepositScenarioDepositToVault": "Stort ontvangen {{poolToken}} in Beefy's kluis",
+  "Vault-DepositScenarioReturnDust": "Retourneer ongebruikte hoeveelheden van {{tokenA}} en {{tokenB}} naar je wallet",
+  "Vault-Withdrawing": "Bezig met opnemen...",
   "Vault-WithdrawButton": "Opnemen",
   "Vault-WithdrawButtonAll": "Alles opnemen",
   "Vault-WithdrawFee": "Er zijn 0.05%-0.1% opname- of stortingskosten op alle kluizen",
   "Vault-WithdrawSuccess": "Opname gelukt",
-  "Vault-WithdrawError": "Opname fout: {{error}}",
-  "Vault-Harvesting": "Oogsten...",
+  "Vault-WithdrawError": "Opname mislukt: {{error}}",
+  "Vault-WithdrawScenario": "Opname resulteert in:",
+  "Vault-WithdrawScenarioRedeem": "Wissel {{mooToken}} tokens in voor {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Verwijder liquiditeit van {{poolToken}} om {{tokenA}} en {{tokenB}} te verkrijgen",
+  "Vault-WithdrawScenarioSwap": "Verwissel geschatte {{swapIn}} voor {{swapOut}} (±{{slippageTolerance}} afwijking en opname kosten, indien van toepassing)",
+  "Vault-WithdrawScenarioTotal": "Retourneer geschatte {{totalOut}} naar je wallet",
+  "Vault-Harvesting": "Bezig met oogsten...",
   "Vault-HarvestButton": "Oogst",
   "Vault-HarvestConfirm": "Bevestig oogst?",
-  "Vault-HarvestDescription": "Handmatig oogsten is NIET NODIG, alle kluizen stapelen automatisch op. Deze functie is bedoeld voor expert-gebuikers. Weet je zeker dat je wilt oogsten?",
+  "Vault-HarvestDescription": "Handmatig oogsten is NIET NODIG, alle kluizen herinvesteren automatisch. Deze functie is bedoeld voor expert-gebuikers. Weet je zeker dat je wilt oogsten?",
   "Vault-HarvestSuccess": "Oogsten gelukt",
-  "Vault-HarvestError": "Oogst fout: {{error}}",
+  "Vault-HarvestError": "Oogst mislukt: {{error}}",
   "Vault-LastHarvest": "Laatste oogst",
   "Vault-MainTitle": "Kluizen",
-  "Vault-SecondTitle": "Stort & verdien geld",
+  "Vault-SecondTitle": "Stort & Verdien geld",
   "Vault-DepositsPausedTitle": "Stortingen gepauzeerd",
   "Vault-DepositsPausedMsg": "Stortingen zijn gepauzeerd voor deze kluis.",
   "Vault-DepositsRetiredTitle": "BUITEN GEBRUIK",
-  "Vault-DepositsRetiredMsg": "Kluis buiten gebruik, neem ZSM je fondsen op.",
-  "Vault-Staked": "Staked",
+  "Vault-DepositsRetiredMsg": "Kluis buiten gebruik, neem z.s.m. je fondsen op",
+  "Vault-Staked": "Gestort",
   "Vault-Description": "Gebruikt: {{vault}}",
   "Vault-Network": "Kies netwerk",
+  "Vault-Experimental": "Experimenteel",
+  "Vault-Loading": "Kluis laden",
+  "Vault-NotFound": "Kluis {{vaultId}} niet gevonden",
+  "Vault-Details": "Kluis details",
+  "Vaults-Back": "Terug naar de kluizen",
   "Hide-Zero-Balances": "Verberg nul saldo's",
   "Hide-Zero-Vault-Balances": "Gebruikt",
   "Retired-Vaults": "Buiten gebruik",
   "Filters-Platform": "Platform",
   "Filters-Vault-Type": "Kluis type",
-  "Filters-Asset": "Asset",
+  "Filters-Asset": "Aandeel",
   "Filters-Sort": "Sorteren op",
   "Filters-All": "Alle",
   "Filters-Default": "Standaard",
-  "Filters-Reset": "Wis filters",
+  "Filters-Reset": "Wis Filters",
   "Confirm": "Bevestig",
   "Cancel": "Annuleer",
   "No-Results": "Geen resultaten",
-  "docs": "help",
+  "docs": "docs",
   "news": "nieuws",
   "source": "broncode",
   "gov": "gov",
@@ -63,9 +81,9 @@
   "products": "producten",
   "Powered-By": "MOGELIJK GEMAAKT DOOR",
   "IFO-Guide": "IFO Handleiding",
-  "Available-To-Stake": "Beschikbaar voor stake",
+  "Available-To-Stake": "Beschikbaar voor storting",
   "Stake": "Stake",
-  "Available-To-Unstake": "Beschikbaar voor unstake",
+  "Available-To-Unstake": "Beschikbaar voor opname",
   "Unstake": "Unstake",
   "Max": "Max",
   "Coming-Soon": "Binnenkort",
@@ -77,19 +95,22 @@
   "Stake-Button-Stake-Tokens": "Stake Tokens",
   "Stake-Button-Unstake-Tokens": "Unstake Tokens",
   "Stake-Button-Claim-Rewards": "Claim beloning",
-  "Stake-Button-Exit": "Claim en unstake",
+  "Stake-Button-Exit": "Claim en opnemen",
   "Stake-Balancer-Your-Balance": "Jouw saldo",
   "Stake-Balancer-Current-Staked": "Momenteel gestaked",
   "Stake-Balancer-Rewards-Available": "Beloningen beschikbaar",
   "Stake-Balancer-Half-Time": "Half-Time",
-  "Stake-BoostedBy": "Versterkt door {{name}}",
+  "Stake-BoostedBy": "Gestimuleerd door {{name}}",
   "Stake-Button-Back": "Terug",
   "Stake-Pool-Retired": "De pool is beeindigd, neem je fondsen op.",
-  "Stake-Total-Value-Locked": "Totale vastgezette waarde",
+  "Stake-Total-Value-Locked": "Totale gestorte waarde",
   "Stake-Your-Pool": "Jouw pool",
-  "Stake-Current-Daily": "Huidig dagtartief",
+  "Stake-Current-Daily": "Huidig dagtarief",
   "Add-Liquidity": "Voeg liquiditeit toe",
-  "Remove-Liquidity": "Verwijderen liquiditeit toe",
+  "Remove-Liquidity": "Verwijder liquiditeit",
   "Buy-Token": "Koop Token",
-  "Wrap-BNB": "Wrap BNB"
+  "Wrap-BNB": "Wrap BNB",
+  "Boost": "Boost",
+  "Experimental": "Experimenteel",
+  "Select-Network": "Kies netwerk"
 }
