Change Launchpool's APY to APR

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,6 +4,7 @@
   "Vault-Wallet": "Wallet",
   "Vault-ConnectWallet": "Connect Wallet",
   "Vault-Balance": "Balance",
+  "Vault-APR": "APR",
   "Vault-APY": "APY",
   "Vault-APYDaily": "Daily",
   "Vault-TVL": "TVL",
