--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -7,6 +7,7 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Tageskurs",
   "Vault-TVL": "TVL",
+  "Vault-AutocompoundingNote": "Alle Vaults werden automatisch zu einer optimalen Rate thesauriert ",
   "Vault-Approving": "Freigeben...",
   "Vault-ApproveButton": "Freigeben",
   "Vault-ApprovalSuccess": "Freigabe erfolgreich",
