Turkish localization tweaks

--- a/src/locales/tr/translation.json
+++ b/src/locales/tr/translation.json
@@ -16,7 +16,7 @@
   "Vault-ApprovalError": "Onaylama hatası: {{error}}",
   "Vault-DepositButton": "Yatır",
   "Vault-DepositButtonAll": "Hepsini Yatır",
-  "Vault-DepositTokensNote": "Yatırılan {{assetToken}} varlıklar için makbuz olarak {{mooToken}} token teslim alacaksınız. Bu tokenler {{assetToken}} varlıklarınızı çekmeniz için gereklidir, {{mooToken}} tokenlerinizi takaslamayın veya tanımadıklarınıza göndermeyin.  ",
+  "Vault-DepositTokensNote": "Yatıracağınız {{assetToken}} varlıkları için makbuz olarak {{mooToken}} tokenleri teslim alacaksınız. Bu tokenler {{assetToken}} varlıklarınızı geri almanız için gereklidir, {{mooToken}} tokenlerinizi takaslamayın veya tanımadıklarınıza göndermeyin.  ",
   "Vault-DepositFee": "<%0.1 yatırma harcı vardır, çekme harcı yoktur",
   "Vault-Deposited": "Yatırılan",
   "Vault-DepositSuccess": "Yatırma başarılı",
@@ -56,7 +56,6 @@
   "Vault-Experimental": "Deneysel",
   "Vault-Loading": "Kasa Yükleniyor",
   "Vault-NotFound": "{{vaultId}} kasası bulunamadı",
-  "Vault-Details": "Kasa detayları",
   "Vaults-Back": "Kasalara dön",
   "Hide-Zero-Balances": "Boş Bakiyeleri Gizle",
   "Hide-Zero-Vault-Balances": "Yatırılmış Kasalar",
@@ -71,17 +70,17 @@
   "Confirm": "Onayla",
   "Cancel": "İptal Et",
   "No-Results": "Sonuç Yok",
-  "docs": "dökümanlar",
-  "news": "haberler",
+  "docs": "dkmnlr",
+  "news": "hbrlr",
   "source": "kaynak",
-  "gov": "yönetim",
-  "vote": "oy ver",
+  "gov": "yntm",
+  "vote": "oyla",
   "stats": "istatistikler",
-  "app": "uygulama",
+  "app": "uyg",
   "socials": "sosyaller",
   "buy": "satın al",
   "products": "ürünler",
-  "Powered-By": "TARAFINDAN DESTEKLENMEKTEDİR",
+  "Powered-By": "POWERED BY",
   "IFO-Guide": "IFO Rehberi",
   "Available-To-Stake": "Yatırmaya Uygun",
   "Stake": "Yatır",
@@ -91,7 +90,7 @@
   "Coming-Soon": "Çok Yakında",
   "Finished": "Bitti",
   "End": "Son",
-  "Stakes-Meta-Title": "Artırmalar - {{networkName}}",
+  "Stakes-Meta-Title": "Boostlar - {{networkName}}",
   "Stake-Meta-Title": "{{earnedToken}} kazan - {{boostedBy}} tarafından artırıldı - {{networkName}}",
   "Stake-Button-Stake": "Yatır",
   "Stake-Button-Claim": "Topla",
@@ -104,7 +103,7 @@
   "Stake-Balancer-Current-Staked": "Şu anki Yatırılan",
   "Stake-Balancer-Rewards-Available": "Mevcut Ödüller",
   "Stake-Balancer-Half-Time": "Yarı Zamanlı",
-  "Stake-BoostedBy": "{{name}} tarafından artırıldı",
+  "Stake-BoostedBy": "{{name}} tarafından boostlandı",
   "Stake-Button-Back": "Geri",
   "Stake-Pool-Retired": "Bu havuz bitmiştir, kaynaklarınızı çekiniz.",
   "Stake-Total-Value-Locked": "Toplam yatırılmış {{mooToken}}",
@@ -114,7 +113,7 @@
   "Remove-Liquidity": "Likit Kaldır",
   "Buy-Token": "Token Satın Al",
   "Wrap-BNB": "BNB Sarmala",
-  "Boost": "Artırma",
+  "Boost": "Boost",
   "Experimental": "Deneysel",
   "Select-Network": "Ağ Seç"
 }
