--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -4,7 +4,7 @@
   "Vault-Wallet": "Portefeuille",
   "Vault-ConnectWallet": "Connection Portefeuille",
   "Vault-Balance": "Solde",
-  "Vault-APY": "PAR (Pourcentage Annuel de Rendement)",
+  "Vault-APY": "RAC (Rendement Annuel Composé)",
   "Vault-APYDaily": "Journalier",
   "Vault-TVL": "VTV (Valeur Totale Vérrouillée)",
   "Vault-AutocompoundingNote": "Tous les coffres réinvestissent automatiquement à frequence optimale",
